<resources>
    <string name="app_name">project_draft1</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="current_location">Current Location</string>
    <string name="where_to">Where to?</string>
    <string name="cash">Cash</string>
    <string name="promo_code">Apply Promo Code</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="request_cab">Request Cab</string>
    <string name="your_cab_is_arriving">Your Cab is Arriving</string>
    <string name="requesting_your_cab">Requesting your cab</string>
    <string name="your_cab_is_booked">Your Cab is Booked</string>
    <string name="your_cab_has_arrived">Your Cab has Arrived</string>
    <string name="you_are_on_a_trip">You are on a trip</string>
    <string name="trip_end">Trip End</string>
    <string name="take_next_ride">Take Next Ride</string>
    <string name="route_not_available_choose_different_locations">Route Not Available: Choose different pickup and drop location</string>
    <string name="you_pay">You Pay</string>
    <string name="cancel_policy">You can cancel before 1:20 pm on Nov 24 to get full refund.</string>
    <string name="book">Book</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="to_station">To Station</string>
    <string name="cancel">Cancel</string>
    <string name="total">TOTAL</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="my_trip">My trip</string>
    <string name="trip_details">Trip Details</string>
    <string name="trip_day">02/12/2022</string>
    <string name="drop_off_time">08:00 am</string>
    <string name="source_location">Abassia Square</string>
    <string name="destination_location">Faculty of Engineering - Gate 3</string>
    <string name="cost">33 EGP</string>
    <string name="payment_details">Payment Details</string>
    <string name="number_of_seats">Number of Seats</string>
    <string name="_1">1</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">-Or-</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="car_pooling">Car Pooling</string>
    <string name="intro_description"><![CDATA[Find a ride & Save Money]]></string>
    <string name="pick_up_time">07:30 am</string>
    <string name="sara_hussein">Sara Hussein</string>
    <string name="black_elantra_n_8687">Black Elantra\n 8687 دا</string>
    <string name="driver_name">Driver name</string>
    <string name="rating">4.8</string>
    <string name="profile_information">Profile Information</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="age_value">22</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_value">+41 340 3293</string>
    <string name="email_value">19p5389@eng.asu.edu.eg</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="password_hint">Enter your password</string>
    <string name="from_where">From where?</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_routes">Available Routes</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_trips">Your Trips</string>
    <string name="title_activity_my_trips">MyTripsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gender">Gender</string>
    <string name="enter_your_gender">Enter your gender</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="add_ride">Add New Ride</string>
    <string name="add_ride_text">Let\'s add a new ride!</string>
    <string name="my_cart">My Cart</string>
    <string name="my_trips">My trips</string>
    <string name="payment">Payment</string>
    <string name="confirm">Confirm the trip</string>
    <string name="view_your_trips">View Your Trips</string>
    <string name="fare">Fare</string>
    <string name="trip_fare">Trip Fare</string>
    <string name="confirm_the_trip">Confirm the trip</string>
    <string name="your_cart_is_empty">Your cart is empty</string>


</resources>