<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/profile_information"
            android:textColor="#4D219C"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="25dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView00" />

        <TextView
            android:id="@+id/textView02"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="29dp"
            android:background="@drawable/txt_back"
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingTop="6dp"
            android:text="@string/sara_hussein"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView01" />

        <TextView
            android:id="@+id/textView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="20dp"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView02" />

        <TextView
            android:id="@+id/textView04"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="29dp"
            android:background="@drawable/txt_back"
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingTop="6dp"
            android:text="@string/age_value"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView03" />

        <TextView
            android:id="@+id/textView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="20dp"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView04" />

        <TextView
            android:id="@+id/textView06"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="29dp"
            android:background="@drawable/txt_back"
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingTop="6dp"
            android:text="@string/phone_value"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/textView05" />


        <TextView
            android:id="@+id/textView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView06" />


        <TextView
            android:id="@+id/textView08"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_below="@id/textView07"
            android:layout_marginStart="28dp"
            android:background="@drawable/txt_back"
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingTop="6dp"
            android:text="@string/email_value"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView07" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
