<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.carpool_project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.carpool_project.ui.gallery.GalleryFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.carpool_project.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_trips"
        android:name="com.example.carpool_project.ui.mytrips.MyTripsFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_my_trips" />
    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.carpool_project.ui.payment.PaymentFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_payment" />

</navigation>